--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+#revised-main {
+  display: flex;
+  flex-direction: row;
+}
+
 body {
   font-family: Arial, sans-serif;
 }
@@ -69,6 +74,9 @@ main {
 }
 
 .company-detail-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   flex: 1;
 }
 
@@ -188,9 +196,6 @@ main {
 /* FAQ Section */
 
 #faq {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   gap: 30px;
   background-color: #444;
   color: #fff;
